--- a/3col-n-ajax/content1.html
+++ b/3col-n-ajax/content1.html
@@ -1,1 +1,4 @@
+<!-- Прихований елемент, звідки JS читатиме заголовок сторінки для підстановки у head => title -->
+<div id="pagetitle" hidden="">Title 1</div>
+<!-- Видимий контент -->
 <h1>Контент 1</h1>
