--- a/3col-n-ajax/content2.html
+++ b/3col-n-ajax/content2.html
@@ -1,1 +1,4 @@
+<!-- Прихований елемент, звідки JS читатиме заголовок сторінки для підстановки у head => title -->
+<div id="pagetitle" hidden="">Title 2</div>
+<!-- Видимий контент -->
 <h1 style="color: red;">Контент 2</h1>
